--- a/mern_stack_full_ecommerce_with_nextjs_website_landing/src/app/global.css
+++ b/mern_stack_full_ecommerce_with_nextjs_website_landing/src/app/global.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	* {
+		@apply font-Poppins text-PrimaryBlack;
+		scroll-behavior: smooth;
+		scroll-margin-top: 5.5rem;
+	}
+}
